--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <title>TADS '26 | Links</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
 
     <main class="container">
 
-        <img src="/assets/img/ifpr-logo.png" alt="Logo" class="logo">
+        <img src="../assets/img/ifpr-logo.png" alt="Logo" class="logo">
 
         <div class="buttons">
 
@@ -31,7 +31,7 @@
 
     </main>
 
-    <script src="/assets/scripts/btns.js"></script>
-    
+    <script src="../assets/scripts/btns.js"></script>
+
 </body>
 </html>
